update feature #2763, commit changes before merging the trunk