@@ -23,6 +23,16 @@
  */
 package com.silverpeas.jobStartPagePeas.servlets;
 
+import java.io.File;
+import java.rmi.RemoteException;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+
+import javax.servlet.http.HttpServletRequest;
+
+import org.apache.commons.fileupload.FileItem;
+
 import com.silverpeas.admin.components.Parameter;
 import com.silverpeas.admin.components.ParameterInputType;
 import com.silverpeas.admin.components.ParameterSorter;
@@ -36,6 +46,7 @@ import com.silverpeas.jobStartPagePeas.control.JobStartPagePeasSessionController
 import com.silverpeas.ui.DisplayI18NHelper;
 import com.silverpeas.util.StringUtil;
 import com.silverpeas.util.i18n.I18NHelper;
+import com.silverpeas.util.template.SilverpeasTemplate;
 import com.silverpeas.util.web.servlet.FileUploadUtil;
 import com.stratelia.silverpeas.peasCore.ComponentContext;
 import com.stratelia.silverpeas.peasCore.MainSessionController;
@@ -56,18 +67,14 @@ import com.stratelia.webactiv.util.ResourceLocator;
 import com.stratelia.webactiv.util.exception.SilverpeasException;
 import com.stratelia.webactiv.util.exception.UtilException;
 import com.stratelia.webactiv.util.fileFolder.FileFolderManager;
-import org.apache.commons.fileupload.FileItem;
 
-import javax.servlet.http.HttpServletRequest;
-import java.io.File;
-import java.rmi.RemoteException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-
-public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobStartPagePeasSessionController> {
+public class JobStartPagePeasRequestRouter extends
+    ComponentRequestRouter<JobStartPagePeasSessionController> {
 
   private static final long serialVersionUID = 3751632991093466433L;
+
+  private static final String WELCOME_SPACE_ADMIN_TEMPLATE_FILE = "welcome_space_admin_";
+  private static final String WELCOME_SPACE_MGR_TEMPLATE_FILE = "welcome_space_manager_";
 
   @Override
   public JobStartPagePeasSessionController createComponentSessionController(
@@ -79,7 +86,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
   /**
    * This method has to be implemented in the component request rooter class. returns the session
    * control bean name to be put in the request object ex : for almanach, returns "almanach"
-   * @return 
+   * @return
    */
   @Override
   public String getSessionControlBeanName() {
@@ -88,12 +95,11 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
 
   /*********************** Gestion de la page d'accueil d'espace *****************************************/
   /**
-   * 
    * @param function
    * @param jobStartPageSC
    * @param request
    * @return
-   * @throws RemoteException 
+   * @throws RemoteException
    */
   public String getDestinationStartPage(String function,
       JobStartPagePeasSessionController jobStartPageSC, HttpServletRequest request) throws
@@ -110,7 +116,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
     switch (startPage) {
       case UpdateJobStartPage:
         SpaceInst spaceint1 = jobStartPageSC.getSpaceInstById();
-        request.setAttribute("FirstPageType", new Integer(spaceint1.getFirstPageType()));
+        request.setAttribute("FirstPageType", Integer.valueOf(spaceint1.getFirstPageType()));
         request.setAttribute("FirstPageParam", spaceint1.getFirstPageExtraParam());
         request.setAttribute("Peas", jobStartPageSC.getManagedSpaceComponents());
         setSpacesNameInRequest(spaceint1, jobStartPageSC, request);
@@ -166,11 +172,10 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
 
   /*********************** Gestion de la navigation à gauche *****************************************/
   /**
-   * 
    * @param function
    * @param jobStartPageSC
    * @param request
-   * @return 
+   * @return
    */
   public String getDestinationNavBar(String function,
       JobStartPagePeasSessionController jobStartPageSC, HttpServletRequest request) {
@@ -190,6 +195,22 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
     } else if ("jobStartPageNav".equals(function)) {
       destination = "/jobStartPagePeas/jsp/jobStartPageNav.jsp";
     } else if ("welcome".equals(function)) {
+      // TODO add silverpeas template content inside request before displaying view
+      SilverpeasTemplate template = jobStartPageSC.getWelcomeTemplate();
+
+      // Check user right
+      if (jobStartPageSC.isUserAdmin()) {
+        request.setAttribute("Content", template
+            .applyFileTemplate(WELCOME_SPACE_ADMIN_TEMPLATE_FILE + jobStartPageSC.getLanguage()));
+      } else {
+        request.setAttribute("Content", template
+            .applyFileTemplate(WELCOME_SPACE_MGR_TEMPLATE_FILE + jobStartPageSC.getLanguage()));
+      }
+      String userAccess = jobStartPageSC.getUserAccessLevel();
+      String userRole = jobStartPageSC.getUserRoleLevel();
+      SilverTrace.debug("jobStartPagePeas", "JobStartPagePeasRequestRouter.getDestinationNavBar",
+          "root.MSG_GEN_PARAM_VALUE", "userAccess = " + userAccess + ", userRole=" + userRole);
+
       destination = "/jobStartPagePeas/jsp/welcome.jsp";
     } else if ("ViewBin".equals(function)) {
       request.setAttribute("Spaces", jobStartPageSC.getRemovedSpaces());
@@ -241,12 +262,11 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
 
   /*********************** Gestion des composants *****************************************/
   /**
-   * 
    * @param function
    * @param jobStartPageSC
    * @param request
    * @return
-   * @throws AdminException 
+   * @throws AdminException
    */
   public String getDestinationComponent(String function,
       JobStartPagePeasSessionController jobStartPageSC, HttpServletRequest request) throws
@@ -273,7 +293,8 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
     } else if ("SetupComponent".equals(function)) {
       String compoId = request.getParameter("ComponentId");
       if (jobStartPageSC.isComponentManageable(compoId)) {
-        jobStartPageSC.setManagedInstanceId(compoId, JobStartPagePeasSessionController.SCOPE_FRONTOFFICE);
+        jobStartPageSC.setManagedInstanceId(compoId,
+            JobStartPagePeasSessionController.SCOPE_FRONTOFFICE);
         destination = "/jobStartPagePeas/jsp/componentInfo.jsp";
       } else {
         destination = "/admin/jsp/accessForbidden.jsp";
@@ -304,7 +325,8 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
         destination = "/jobStartPagePeas/jsp/closeWindow.jsp";
       } else {
         // TODO : Mauvaise gestion des exceptions
-        // Si la création de l'espace se passe mal alors l'exception n'est pas déportée vers les appelants
+        // Si la création de l'espace se passe mal alors l'exception n'est pas déportée vers les
+        // appelants
         request.setAttribute("When", "ComponentCreation");
 
         setSpacesNameInRequest(jobStartPageSC, request);
@@ -402,33 +424,36 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
       SilverTrace.info("jobStartPagePeas",
           "JobStartPagePeasRequestRouter.EffectivePlaceComponent()",
           "root.MSG_GEN_PARAM_VALUE", "Managed spaceId= "
-          + jobStartPageSC.getManagedSpaceId());
+              + jobStartPageSC.getManagedSpaceId());
       SpaceInst destinationSpace = jobStartPageSC.getSpaceInstById(request.getParameter(
           "DestinationSpace"));
       SilverTrace.info("jobStartPagePeas",
           "JobStartPagePeasRequestRouter.EffectivePlaceComponent()",
           "root.MSG_GEN_PARAM_VALUE", "espace source: " + currentSpace.getId()
-          + " espace dest=" + destinationSpace.getId());
+              + " espace dest=" + destinationSpace.getId());
       // Moving only if destination space and current space are different
       if (!destinationSpace.getId().equals(currentSpace.getId())) {
         SilverTrace.info("jobStartPagePeas",
             "JobStartPagePeasRequestRouter.EffectivePlaceComponent()",
             "root.MSG_GEN_PARAM_VALUE", "espace source: "
-            + jobStartPageSC.isSpaceInMaintenance(currentSpace.getId().substring(2))
-            + " espace dest="
-            + jobStartPageSC.isSpaceInMaintenance(destinationSpace.getId().substring(2)));
+                + jobStartPageSC.isSpaceInMaintenance(currentSpace.getId().substring(2))
+                + " espace dest="
+                + jobStartPageSC.isSpaceInMaintenance(destinationSpace.getId().substring(2)));
         // Destination and source space in maintenance = OK
-        if ((jobStartPageSC.isSpaceInMaintenance(destinationSpace.getId().substring(2)) && jobStartPageSC.
+        if ((jobStartPageSC.isSpaceInMaintenance(destinationSpace.getId().substring(2)) && jobStartPageSC
+            .
             isSpaceInMaintenance(currentSpace.getId().substring(2)))
-            || jobStartPageSC.isAppInMaintenance()) {
+            ||
+            jobStartPageSC.isAppInMaintenance()) {
           // Moving component to space
           SilverTrace.info("jobStartPagePeas",
               "JobStartPagePeasRequestRouter.EffectivePlaceComponent()",
               "root.MSG_GEN_PARAM_VALUE", "component = " + compoint1.getId()
-              + " espace dest:" + destinationSpace.getId().substring(2)
-              + " componentBefore="
-              + request.getParameter("ComponentBefore"));
-          jobStartPageSC.setMoveComponentToSpace(compoint1, request.getParameter("DestinationSpace").
+                  + " espace dest:" + destinationSpace.getId().substring(2)
+                  + " componentBefore="
+                  + request.getParameter("ComponentBefore"));
+          jobStartPageSC.setMoveComponentToSpace(compoint1, request
+              .getParameter("DestinationSpace").
               substring(2), request.getParameter("ComponentBefore"));
           SilverTrace.info("jobStartPagePeas",
               "JobStartPagePeasRequestRouter.EffectivePlaceComponent()",
@@ -478,7 +503,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
       SilverTrace.info("jobStartPagePeas",
           "JobStartPagePeasRequestRouter.ChangeDestinationSpace()",
           "root.MSG_GEN_PARAM_VALUE", "currentSpaceId=" + currentSpace.getId()
-          + "selectedSpaceId=" + selectedSpace.getId());
+              + "selectedSpaceId=" + selectedSpace.getId());
       request.setAttribute("jobStartPageSC", jobStartPageSC);
       request.setAttribute("currentComponentName", compoint1.getLabel());
       request.setAttribute("currentSpace", currentSpace);
@@ -494,7 +519,8 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
         request.setAttribute("brothers", jobStartPageSC.getBrotherComponents(false));
       } else {
         // Get all components of the selected space
-        request.setAttribute("brothers", jobStartPageSC.getComponentsOfSpace(selectedSpace.getId()));
+        request
+            .setAttribute("brothers", jobStartPageSC.getComponentsOfSpace(selectedSpace.getId()));
       }
       destination = "/jobStartPagePeas/jsp/placeComponentAfter.jsp";
     } else if (function.equals("DeleteUsersGroupsProfileInstance")) {
@@ -539,7 +565,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
             SilverpeasException.ERROR, "jobStartPagePeas.CANT_COPY_COMPONENT",
             e);
       }
-      destination = URLManager.getURL(URLManager.CMP_CLIPBOARD)
+      destination = URLManager.getURL(URLManager.CMP_CLIPBOARD, null, null)
           + "Idle.jsp?message=REFRESHCLIPBOARD";
     } else if (function.startsWith("paste")) {
       try {
@@ -557,7 +583,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
         destination = "/jobStartPagePeas/jsp/welcome.jsp";
       }
     } else if (function.equals("OpenComponent")) {
-      //check if user can update it
+      // check if user can update it
       String id = request.getParameter("ComponentId");
       if (!jobStartPageSC.isComponentManageable(id)) {
         destination = "/admin/jsp/accessForbidden.jsp";
@@ -637,7 +663,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
         jobStartPageSC.setCreateSpaceParameters(request.getParameter("NameObject"), request.
             getParameter("Description"),
             request.getParameter("SousEspace"), spaceTemplate, I18NHelper.getSelectedLanguage(
-            request),
+                request),
             request.getParameter("SelectedLook"));
       }
 
@@ -672,7 +698,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
       // Update the space
       SpaceInst spaceint1 = jobStartPageSC.getSpaceInstById();
 
-      request2SpaceInst(spaceint1, request, jobStartPageSC);
+      request2SpaceInst(spaceint1, request);
 
       String spaceId = jobStartPageSC.updateSpaceInst(spaceint1);
       if (spaceId != null && spaceId.length() > 0) {
@@ -720,7 +746,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
         SilverTrace.info("jobStartPagePeas",
             "JobStartPagePeasRequestRouter.SpaceManager()",
             "root.MSG_GEN_PARAM_VALUE", "profileName=" + profile.getName()
-            + " profileName=" + profile.getLabel());
+                + " profileName=" + profile.getLabel());
         request.setAttribute("Profile", profile);
       }
 
@@ -738,7 +764,8 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
       SpaceProfileInst inheritedProfile = spaceint1.getInheritedSpaceProfileInst(role);
       if (inheritedProfile != null) {
         request.setAttribute("InheritedProfile", inheritedProfile);
-        request.setAttribute("listInheritedGroups", jobStartPageSC.groupIds2groups(inheritedProfile.
+        request.setAttribute("listInheritedGroups", jobStartPageSC.groupIds2groups(inheritedProfile
+            .
             getAllGroups()));
         request.setAttribute("listInheritedUsers", jobStartPageSC.userIds2users(inheritedProfile.
             getAllUsers()));
@@ -780,19 +807,19 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
       destination = getDestination("SpaceManager", jobStartPageSC, request);
     } else if (function.equals("SpaceManagerDescription")) {
       SpaceInst spaceint1 = jobStartPageSC.getSpaceInstById();
-      List<SpaceProfileInst> m_ListSpaceProfileInst = spaceint1.getAllSpaceProfilesInst();
+      List<SpaceProfileInst> listSpaceProfileInst = spaceint1.getAllSpaceProfilesInst();
       int i = 0;
-      SpaceProfileInst m_SpaceProfileInst = null;
+      SpaceProfileInst spaceProfileInst = null;
       String name = "";
       String desc = "";
-      if (i < m_ListSpaceProfileInst.size()) {// seulement le premier profil
+      if (i < listSpaceProfileInst.size()) {// seulement le premier profil
         // (manager)
-        m_SpaceProfileInst = m_ListSpaceProfileInst.get(i);
-        name = m_SpaceProfileInst.getLabel();
+        spaceProfileInst = listSpaceProfileInst.get(i);
+        name = spaceProfileInst.getLabel();
         if (name.equals("")) {
           name = jobStartPageSC.getMultilang().getString("Manager");
         }
-        desc = m_SpaceProfileInst.getDescription();
+        desc = spaceProfileInst.getDescription();
       }
 
       setSpacesNameInRequest(spaceint1, jobStartPageSC, request);
@@ -809,16 +836,16 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
 
       // Update the space
       SpaceInst spaceint1 = jobStartPageSC.getSpaceInstById();
-      List<SpaceProfileInst> m_ListSpaceProfileInst = spaceint1.getAllSpaceProfilesInst();
+      List<SpaceProfileInst> listSpaceProfileInst = spaceint1.getAllSpaceProfilesInst();
       int i = 0;
-      SpaceProfileInst m_SpaceProfileInst = null;
-      if (i < m_ListSpaceProfileInst.size()) {// seulement le premier profil
+      SpaceProfileInst spaceProfileInst = null;
+      if (i < listSpaceProfileInst.size()) {// seulement le premier profil
         // (manager)
-        m_SpaceProfileInst = m_ListSpaceProfileInst.get(i);
-        m_SpaceProfileInst.setLabel(name);
-        m_SpaceProfileInst.setDescription(desc);
+        spaceProfileInst = listSpaceProfileInst.get(i);
+        spaceProfileInst.setLabel(name);
+        spaceProfileInst.setDescription(desc);
 
-        jobStartPageSC.updateSpaceManagersDescription(m_SpaceProfileInst);
+        jobStartPageSC.updateSpaceManagersDescription(spaceProfileInst);
       }
 
       request.setAttribute("urlToReload", "SpaceManager");
@@ -866,8 +893,8 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
           if (extension != null && extension.equalsIgnoreCase("jpeg")) {
             extension = "jpg";
           }
-          FileRepositoryManager.createAbsolutePath("Space"
-              + jobStartPageSC.getManagedSpaceId(), "look");
+          FileRepositoryManager.createAbsolutePath("Space" + jobStartPageSC.getManagedSpaceId(),
+              "look");
           String[] dir = new String[1];
           dir[0] = "look";
 
@@ -885,8 +912,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
             wallPaper.delete();
           }
 
-          file.write(new File(path + File.separator + "wallPaper."
-              + extension.toLowerCase()));
+          file.write(new File(path + File.separator + "wallPaper." + extension.toLowerCase()));
         }
 
         String selectedLook = FileUploadUtil.getParameter(items, "SelectedLook");
@@ -924,28 +950,28 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
       File file = new File(path + File.separator + fileName);
       file.delete();
       destination = getDestination("SpaceLook", jobStartPageSC, request);
-    } else if(function.equals("OpenSpace")) {
+    } else if (function.equals("OpenSpace")) {
       jobStartPageSC.init();
-      
+
       if (StringUtil.isDefined(request.getParameter("Espace"))) {
-          jobStartPageSC.setSpaceId(request.getParameter("Espace"));
+        jobStartPageSC.setSpaceId(request.getParameter("Espace"));
       } else {
         jobStartPageSC.setSpaceId(null);
       }
-      
+
       destination = getDestination("StartPageInfo", jobStartPageSC, request);
-    } else if(function.equals("OpenSubSpace")) {
+    } else if (function.equals("OpenSubSpace")) {
       jobStartPageSC.init();
-      
+
       if (StringUtil.isDefined(request.getParameter("Espace"))) {
         jobStartPageSC.setSpaceId(request.getParameter("Espace"));
         if (StringUtil.isDefined(request.getParameter("SousEspace"))) {
           jobStartPageSC.setSubSpaceId(request.getParameter("SousEspace"));
-        } 
+        }
       } else {
         jobStartPageSC.setSpaceId(null);
       }
-      
+
       destination = getDestination("StartPageInfo", jobStartPageSC, request);
     }
 
@@ -954,7 +980,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
 
   private String getSpaceLookRepository(JobStartPagePeasSessionController sc) {
     return FileRepositoryManager.getAbsolutePath("Space"
-        + sc.getManagedSpaceId(), new String[]{"look"});
+        + sc.getManagedSpaceId(), new String[] { "look" });
   }
 
   /**
@@ -971,11 +997,9 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
     String destination = null;
     SilverTrace.info("jobStartPagePeas", "JobStartPagePeasRequestRouter.getDestination()",
         "root.MSG_GEN_PARAM_VALUE", "User=" + jobStartPageSC.getUserId() + " Function="
-        + function);
+            + function);
     try {
-      if (destination == null) {
-        destination = getDestinationStartPage(function, jobStartPageSC, request);
-      }
+      destination = getDestinationStartPage(function, jobStartPageSC, request);
       if (destination == null) {
         destination = getDestinationNavBar(function, jobStartPageSC, request);
       }
@@ -1049,10 +1073,10 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
         request.setAttribute("ProfileEditable", jobStartPageSC.isProfileEditable());
         request.setAttribute("IsInheritanceEnable", Boolean.valueOf(
             JobStartPagePeasSettings.isInheritanceEnable));
-        
+
         String profileHelp = jobStartPageSC.getManagedProfileHelp(compoint1.getName());
         request.setAttribute("ProfileHelp", profileHelp);
-        
+
         request.setAttribute("Scope", jobStartPageSC.getScope());
       }
     } catch (Exception e) {
@@ -1067,8 +1091,8 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
 
   protected void refreshNavBar(JobStartPagePeasSessionController jobStartPageSC,
       HttpServletRequest request) {
-      jobStartPageSC.refreshCurrentSpaceCache();
-      request.setAttribute("haveToRefreshNavBar", Boolean.TRUE);
+    jobStartPageSC.refreshCurrentSpaceCache();
+    request.setAttribute("haveToRefreshNavBar", Boolean.TRUE);
   }
 
   private void setSpacesNameInRequest(
@@ -1124,7 +1148,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
           String valeur = groupe.substring(j, j + 1);
           total += Integer.parseInt(valeur);
         }
-        if (total != new Integer(serial.substring(i * 2, i * 2 + 2)).intValue()) {
+        if (total != Integer.valueOf(serial.substring(i * 2, i * 2 + 2))) {
           validSequence = false;
         }
       }
@@ -1134,8 +1158,7 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
     return validSequence;
   }
 
-  private void request2SpaceInst(SpaceInst spaceInst, HttpServletRequest request,
-      JobStartPagePeasSessionController jobStartPageSC) {
+  private void request2SpaceInst(SpaceInst spaceInst, HttpServletRequest request) {
     String name = request.getParameter("NameObject");
     String desc = request.getParameter("Description");
     String pInheritance = request.getParameter("InheritanceBlocked");
@@ -1283,7 +1306,8 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
         isPublic = "yes";
       }
       Parameter publicParam = createIsPublicParam(isPublic);
-      visibleParameters.add(0, new LocalizedParameter(publicParam, sessionController.getLanguage()));
+      visibleParameters
+          .add(0, new LocalizedParameter(publicParam, sessionController.getLanguage()));
     }
     request.setAttribute("Parameters", visibleParameters);
     Collections.sort(localizedParameters, new LocalizedParameterSorter());
@@ -1307,7 +1331,8 @@ public class JobStartPagePeasRequestRouter extends ComponentRequestRouter<JobSta
     visibleParameters.add(0, new LocalizedParameter(hiddenParam, sessionController.getLanguage()));
     if (JobStartPagePeasSettings.isPublicParameterEnable) {
       Parameter publicParam = createIsPublicParam("no");
-      visibleParameters.add(0, new LocalizedParameter(publicParam, sessionController.getLanguage()));
+      visibleParameters
+          .add(0, new LocalizedParameter(publicParam, sessionController.getLanguage()));
     }
     request.setAttribute("Parameters", visibleParameters);
     request.setAttribute("HiddenParameters", getHiddenParameters(componentInstSelected.
